# astro

./: .gitignore  CMakeLists.txt  Doxyfile  GIT_COMMANDS.md  README.md  astro.conf.example  build.sh  main.cpp  names.ini  ny_aalesund.ini
docs/: API.md  BUILD.md  DOXYGEN.md  GIT_WORKFLOW.md  PROJECT_STRUCTURE.md
docs/doxygen/html/: annotated.html  annotated_dup.js  classMGeoPoint-members.html  classMGeoPoint.html  classMGeoPoint.js  classMSunPosition-members.html  classMSunPosition.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  geo__point_8cpp.html  geo__point_8h.html  geo__point_8h.js  geo__point_8h_source.html  index.html  navtreedata.js  navtreeindex0.js  structMDateTimeUtc-members.html  structMDateTimeUtc.html  structMDateTimeUtc.js  structMEcefPoint-members.html  structMEcefPoint.html  structMEcefPoint.js  structMSunDailyEventsUtc-members.html  structMSunDailyEventsUtc.html  structMSunDailyEventsUtc.js  structMSunHorizontalPosition-members.html  structMSunHorizontalPosition.html  structMSunHorizontalPosition.js  sun__position_8cpp.html  sun__position_8h.html  sun__position_8h.js  sun__position_8h_source.html
docs/doxygen/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  (+21 more)
inc/: cli_file_io.h  cli_input.h  geo_point.h  print_output.h  sun_position.h
scripts/: astro-completion.bash  git-overview.sh
src/: cli_file_io.cpp  cli_input.cpp  geo_point.cpp  print_output.cpp  sun_position.cpp
tests/: test_sun_position.cpp
